--- a/generic_report_client/src/main/webapp/module_dashboard.html
+++ b/generic_report_client/src/main/webapp/module_dashboard.html
@@ -39,24 +39,103 @@
       <div class="seperate_div_class" style="margin-top:118px"></div>
 
       <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+          <a class="card card-banner card-green-light">
+            <div class="card-body">
+              <i class="icon fa fa-cloud-download fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Saved Reports</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_saved_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+          <a class="card card-banner card-blue-light">
+            <div class="card-body">
+              <i class="icon fa fa-share-square-o fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Shared Reports</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_shared_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+          <a class="card card-banner card-yellow-light">
+            <div class="card-body">
+              <i class="icon fa fa-share-alt fa-4x"></i>
+              <div class="content">
+                <div class="title">Matrix Shared Reports</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:total_shared_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+          <a class="card card-banner card-orange-light">
+            <div class="card-body">
+              <i class="icon fa fa-file-archive-o fa-4x"></i>
+              <div class="content">
+                <div class="title">Matrix Shared Templates</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:total_template_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-12">
           <div class="card">
             <div class="card-header">
               <div class="card-title">
-                <i class="fa fa-diamond">&nbsp;Report Dashboard&nbsp;&nbsp;&nbsp;</i>
+                <i class="fa fa-diamond">&nbsp;Table&nbsp;&nbsp;&nbsp;</i>
               </div>
 
             </div>
             <div class="card-body flat-matrix">
-              TBD
+              <div>
+                <div class="row" data-bind="with:self_saved_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>tag</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <span data-bind="if:$data[17]" >
+                                <!-- ko foreach: $data[17].split(',') -->
+                                <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                                <!-- /ko -->
+                            </span>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-
-
-
       </div>
-
 
       <div class="seperate_div_class" style="margin-top:58px"></div>
 
@@ -87,6 +166,7 @@
     <script src="assets/reference/markdown/markdown.min.js"></script>
 
     <!-- Javascript for Matrix Self Owned -->
+    <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
     <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
     <script src="assets/self-owned/js/generic/generic_cache.js"></script>
     <script src="assets/self-owned/js/generic/generic_charting.js"></script>
@@ -99,7 +179,8 @@
     <script src="assets/self-owned/js/generic/generic_validation.js"></script>
     <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
 
-
+    <script src="assets/self-owned/js/module/dashboard/logic.js"></script>
+    <script src="assets/self-owned/js/module/dashboard/vm.js"></script>
 
 
 
@@ -110,8 +191,12 @@
         $('#navbar').load($.getRootPath() + '/components/header.html');
         setTimeout(function() {
           resetCssClass('li_dashboard', 'active');
+          $('#navbar_title_li').html('Matrix Report Dashboard');
         }, 200);
       });
+
+      var viewModel = new DashboardViewModel();
+      ko.applyBindings(viewModel, document.getElementById('main_content_div'));
     </script>
 
 </body>
