--- a/generic_report_client/src/main/webapp/module_report_viewer.html
+++ b/generic_report_client/src/main/webapp/module_report_viewer.html
@@ -24,7 +24,40 @@
   <link rel="stylesheet" type="text/css" href="assets/reference/bootstrap-fileinput/css/fileinput_ly.css" media="all">
 
 
+  <style>
+    .CodeMirror {
+      border: 1px solid #eee;
+      height: auto;
+    }
 
+    .compile_mode_focus_in {
+      padding: 8px 20px;
+      margin: 6px 0;
+      border: 1px solid #eee;
+      border-left-width: 5px;
+      border-radius: 3px;
+      border-left-color: #39c3da;
+    }
+
+    .compile_mode_focus_out {
+      padding: 8px 20px 8px 25px;
+      margin: 6px 0;
+    }
+
+    .edit_mode_focus_in {
+      padding: 5px 20px;
+      margin: 6px 0;
+      border: 1px solid #eee;
+      border-left-width: 5px;
+      border-radius: 3px;
+      border-left-color: #1abc9c;
+    }
+
+    .edit_mode_focus_out {
+      padding: 8px 20px 8px 25px;
+      margin: 6px 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -36,26 +69,29 @@
 
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
 
-      <div class="seperate_div_class" style="margin-top:118px"></div>
+      <div id="hidden_div" class="row" style="position:fixed;top:88px;left: 180px;right: 0px;z-index:100006;background-color: #E7EDEE;height:30px">
+        <div class="col-xs-12">
+        </div>
+      </div>
 
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card">
-            <div class="card-header">
-              <div class="card-title">
-                <i class="fa fa-diamond">&nbsp;Report Viewer&nbsp;&nbsp;&nbsp;</i>
+
+      <div id="report_content_seperate_div" class="seperate_div_class" style="margin-top:88px"></div>
+
+      <div class="row" id="report_content_div">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"  style="margin-top:30px">
+          <div class="card card-mini">
+            <div class="card-body" id="report_content_body_div" style="min-height:300px">
+              <div data-bind="foreach:cells">
+                <div data-bind="css: currentStyle, attr:{'id':div_id}, event: {focus: listener_focus_in,blur: listener_focus_out}" tabindex="100">
+                  <span class="cell_div_view markdown-body" data-bind="html:code_compiled, visible:isViewMode"></span>
+                  <div class="cell_div_chart" data-bind="attr:{'id':chart_div_id}, visible:isChartMode" style="display:none;width: 100%;height:100%;min-height:360px"></div>
+                </div>
               </div>
-
-            </div>
-            <div class="card-body flat-matrix">
-              TBD
             </div>
           </div>
         </div>
-
-
-
       </div>
+
 
 
       <div class="seperate_div_class" style="margin-top:58px"></div>
@@ -70,6 +106,38 @@
         </div>
       </footer>
 
+      <div id="copyDiv" tabindex="100" style="display:none" class="compile_mode_focus_in">
+        <span class="cell_div_view">Please double click to edit the content...</span>
+        <textarea class="cell_div_edit" style="display:none">Please double click to edit the content...</textarea>
+      </div>
+
+      <div class="modal fade" id="popupModalPro" tabindex="-1" role="dialog" aria-labelledby="matrixModalLabel">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <i class="fa fa-power-off"></i> &nbsp; <span class="modal-title" id="popupModalLabelPro"></span>
+            </div>
+            <div class="modal-body">
+              <div id="modalContentDIVPro"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="btn-floating" id="help-actions">
+        <div class="btn-bg" style="background-color:#3498db;box-shadow: 0 1px 3px #3498db;"></div>
+        <button type="button" class="btn btn-info btn-toggle" data-toggle="toggle" data-target="#help-actions">
+          <i class="icon fa fa-plus"></i>
+          <span class="help-text">Shortcut</span>
+        </button>
+        <div class="toggle-content">
+          <ul class="actions">
+            <li><a href="#" onclick="viewMode()">Full Style(F8)</a></li>
+            <li><a href="#" onclick="editMode()">Normal Style(F8)</a></li>
+          </ul>
+        </div>
+      </div>
 
     </div>
 
@@ -84,9 +152,16 @@
     <script src="assets/reference/jquery/jquery.blockUI.js"></script>
     <script src="assets/reference/knockout.js/knockout-3.3.0.js"></script>
     <script src="assets/reference/jquery-tiny-pubsub/tiny-pubsub.js"></script>
-    <script src="assets/reference/markdown/markdown.min.js"></script>
+    <script src="assets/reference/markdown/showdown.js"></script>
+    <script src="assets/reference/echarts/echarts-min.js"></script>
+    <script src="assets/reference/echarts/dataTools.js"></script>
+    <script src="assets/reference/echarts/geo/world.js"></script>
+
+    <script src="assets/reference/bootstrap-fileinput/js/fileinput_ly.js"></script>
+    <script src="assets/reference/bootstrap-fileinput/js/locales/zh.js"></script>
 
     <!-- Javascript for Matrix Self Owned -->
+    <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
     <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
     <script src="assets/self-owned/js/generic/generic_cache.js"></script>
     <script src="assets/self-owned/js/generic/generic_charting.js"></script>
@@ -98,7 +173,10 @@
     <script src="assets/self-owned/js/generic/generic_util.js"></script>
     <script src="assets/self-owned/js/generic/generic_validation.js"></script>
     <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
-
+    <script src="assets/self-owned/js/generic/generic_upload.js"></script>
+    <!-- Javascript for Matrix Report Editor Self Owned -->
+    <script src="assets/self-owned/js/module/kits/vm.js"></script>
+    <script src="assets/self-owned/js/module/kits/logic.js"></script>
 
 
 
@@ -109,7 +187,9 @@
         $('#sidebar').load($.getRootPath() + '/components/left_side.html');
         $('#navbar').load($.getRootPath() + '/components/header.html');
         setTimeout(function() {
-          resetCssClass('li_dashboard', 'active');
+          $('#navbar_title_li').html('Matrix Report Viewer');
+          $('#navbar_search_li').css('display','none');
+          add_shortcut_key_listener_view();
         }, 200);
       });
     </script>
