--- a/generic_report_client/src/main/webapp/module_dashboard.html
+++ b/generic_report_client/src/main/webapp/module_dashboard.html
@@ -90,7 +90,7 @@
           <div class="card">
             <div class="card-header">
               <div class="card-title">
-                <i class="fa fa-diamond">&nbsp;Table&nbsp;&nbsp;&nbsp;</i>
+                <i class="fa fa-diamond">&nbsp;My Saved Reports&nbsp;&nbsp;&nbsp;</i>
               </div>
 
             </div>
@@ -106,6 +106,7 @@
                           <th>author</th>
                           <th>time</th>
                           <th>tag</th>
+                          <th>action</th>
                         </tr>
                       </thead>
                       <tbody data-bind="foreach: viewData">
@@ -125,6 +126,185 @@
                                 <span class="label label-info" data-bind="text:$data"></span> &nbsp;
                                 <!-- /ko -->
                             </span>
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;My Shared Reports&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:self_shared_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>tag</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <span data-bind="if:$data[17]" >
+                                <!-- ko foreach: $data[17].split(',') -->
+                                <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                                <!-- /ko -->
+                            </span>
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;Shared Reports&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:all_saved_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>tag</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <span data-bind="if:$data[17]" >
+                                <!-- ko foreach: $data[17].split(',') -->
+                                <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                                <!-- /ko -->
+                            </span>
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;Shared Templates&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:all_template_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>tag</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <span data-bind="if:$data[17]" >
+                                <!-- ko foreach: $data[17].split(',') -->
+                                <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                                <!-- /ko -->
+                            </span>
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
                           </td>
                         </tr>
                       </tbody>
