--- a/generic_report_client/src/main/webapp/module_gallery_template_all.html
+++ b/generic_report_client/src/main/webapp/module_gallery_template_all.html
@@ -58,7 +58,7 @@
       <div class="row" id="content_div">
         <!--ko foreach: viewData-->
         <div class="col-xs-12" style="margin-bottom:18px;">
-          <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){redirect2editor($data)}}">
+          <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){redirect2viewer($data)}}">
             <div class="card-body">
               <i class="icon fa fa-share-square-o fa-4x"></i>
               <div class="content">
