--- a/generic_report_client/src/main/webapp/module_dashboard.html
+++ b/generic_report_client/src/main/webapp/module_dashboard.html
@@ -31,7 +31,7 @@
 
   <div class="app app-blue-sky" id="contentDIV">
 
-    <aside class="app-sidebar" id="sidebar"></aside>
+    <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
     <div class="app-container" id="main_content_div">
 
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
@@ -39,7 +39,7 @@
       <div class="seperate_div_class" style="margin-top:118px"></div>
 
       <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <a class="card card-banner card-green-light">
             <div class="card-body">
               <i class="icon fa fa-cloud-download fa-4x"></i>
@@ -50,7 +50,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <a class="card card-banner card-blue-light">
             <div class="card-body">
               <i class="icon fa fa-share-square-o fa-4x"></i>
@@ -61,7 +61,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <a class="card card-banner card-yellow-light">
             <div class="card-body">
               <i class="icon fa fa-share-alt fa-4x"></i>
@@ -72,7 +72,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <a class="card card-banner card-orange-light">
             <div class="card-body">
               <i class="icon fa fa-file-archive-o fa-4x"></i>
