--- a/generic_report_client/src/main/webapp/module_gallery_saved_self.html
+++ b/generic_report_client/src/main/webapp/module_gallery_saved_self.html
@@ -31,7 +31,7 @@
 
   <div class="app app-blue-sky" id="contentDIV">
 
-    <aside class="app-sidebar" id="sidebar"></aside>
+    <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
     <div class="app-container" id="main_content_div">
 
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
