--- a/generic_report_client/src/main/webapp/module_report_viewer.html
+++ b/generic_report_client/src/main/webapp/module_report_viewer.html
@@ -64,7 +64,7 @@
 
   <div class="app app-blue-sky" id="contentDIV">
 
-    <aside class="app-sidebar" id="sidebar"></aside>
+    <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
     <div class="app-container" id="main_content_div">
 
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
@@ -84,6 +84,7 @@
               <div data-bind="foreach:cells">
                 <div data-bind="css: currentStyle, attr:{'id':div_id}, event: {focus: listener_focus_in,blur: listener_focus_out}" tabindex="100">
                   <span class="cell_div_view markdown-body" data-bind="html:code_compiled, visible:isViewMode"></span>
+                  <textarea class="cell_div_edit" style="display:none" data-bind="text:code_source,attr:{'id':edit_div_id},"></textarea>
                   <div class="cell_div_chart" data-bind="attr:{'id':chart_div_id}, visible:isChartMode" style="display:none;width: 100%;height:100%;min-height:360px"></div>
                 </div>
               </div>
@@ -164,7 +165,7 @@
     <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
     <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
     <script src="assets/self-owned/js/generic/generic_cache.js"></script>
-    <script src="assets/self-owned/js/generic/generic_charting.js"></script>
+    <script src="assets/self-owned/js/generic/generic_charting_v3.js"></script>
     <script src="assets/self-owned/js/generic/generic_csv.js"></script>
     <script src="assets/self-owned/js/generic/generic_cud.js"></script>
     <script src="assets/self-owned/js/generic/generic_modal.js"></script>
@@ -190,6 +191,7 @@
           $('#navbar_title_li').html('Matrix Report Viewer');
           $('#navbar_search_li').css('display','none');
           add_shortcut_key_listener_view();
+          current_mode = 'VIEW';
         }, 200);
       });
     </script>
