--- a/generic_report_client/src/main/webapp/module_dashboard.html
+++ b/generic_report_client/src/main/webapp/module_dashboard.html
@@ -244,7 +244,7 @@
                             </span>
                           </td>
                           <td>
-                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                            <button type="button" data-bind="event:{click:function(){redirect2viewer($data)}}"  class="btn btn-link " title="detail">
                               <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
                             </button>
                           </td>
@@ -302,7 +302,7 @@
                             </span>
                           </td>
                           <td>
-                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                            <button type="button" data-bind="event:{click:function(){redirect2viewer($data)}}"  class="btn btn-link " title="detail">
                               <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
                             </button>
                           </td>
