--- a/generic_charting_client/src/main/webapp/module_chart_editor.html
+++ b/generic_charting_client/src/main/webapp/module_chart_editor.html
@@ -65,7 +65,7 @@
         <div class="col-md-8" id="chart_content_div" style="margin-top:30px" onresize="console.log(1)">
           <div class="card card-mini">
             <div class="card-body" id="chart_content_body_div" style="min-height:360px">
-              <div id="main_chart" style="width: 100%;height:100%;min-height:360px"></div>
+              <div id="main_chart" style="width: 100%;height:100%;min-height:660px"></div>
             </div>
           </div>
           <br>
@@ -255,6 +255,9 @@
           $('#navbar_title_li').html('Matrix Chart Editor');
           $('#navbar_search_li').css('display', 'none');
         }, 200);
+        setTimeout(function() {
+          rerender_children_dom('bar')
+        }, 800);
       });
     </script>
 
