--- a/generic_charting_client/src/main/webapp/module_dashboard_editor.html
+++ b/generic_charting_client/src/main/webapp/module_dashboard_editor.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <div class="app app-blue-sky" id="contentDIV">
+  <div class="app app-blue-sky">
 
     <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
     <div class="app-container" id="main_content_div">
@@ -41,17 +41,15 @@
       <div class="seperate_div_class" style="margin-top:118px"></div>
 
 
+      
+
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
-            <div class="card-header">
-              <div class="card-title">
-                <i class="fa fa-diamond">&nbsp;TBD&nbsp;&nbsp;&nbsp;</i>
-              </div>
-            </div>
-          </div>
+          <!-- 应用具体内容DIV-->
+          <div id="contentDIV"></div>
         </div>
       </div>
+
 
 
       <div class="seperate_div_class" style="margin-top:58px"></div>
@@ -86,7 +84,7 @@
     <script src="assets/reference/jquery-ui/jquery-ui.js"></script>
     <script src="assets/reference/lodash/lodash-4.15.0.js"></script>
     <script src="assets/reference/gridstack/gridstack.all.js"></script>
-    
+
 
     <!-- Javascript for Matrix Self Owned -->
     <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
@@ -112,14 +110,14 @@
       $(document).ready(function() {
         $('#sidebar').load($.getRootPath() + '/components/left_side.html');
         $('#navbar').load($.getRootPath() + '/components/header.html');
+        $('#contentDIV').load($.getRootPath() + '/assets/self-owned/html/dashboard/dashboard_content.html');
         setTimeout(function() {
           resetCssClass('li_dashboard', 'active');
           $('#navbar_title_li').html('Matrix Chart Dashboard');
         }, 200);
       });
 
-      var viewModel = new DashboardViewModel();
-      ko.applyBindings(viewModel, document.getElementById('main_content_div'));
+
     </script>
 
 </body>
